# Kitti_MultiNet

./: CMakeLists.txt  README.md  clean.sh  package.xml
incl/: MultiNet
launch/: kitti.launch
scripts/: kitti_nets.py  kitti_player.py
